fix for MID-3792 Text overflow in a view of roles

--- a/gui/admin-gui/src/main/webapp/less/midpoint-theme.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint-theme.less
@@ -1127,6 +1127,9 @@ dd.stacktrace::before {
       padding-left: 12px;
       padding-right: 12px;
       padding-bottom: 10px;
+		max-width: 80%;
+		overflow: hidden;
+		text-overflow: ellipsis
 	}
     .inner-description {
       font-size: 11px;
